--- a/menu.html
+++ b/menu.html
@@ -23,7 +23,7 @@
         <li><a href="/pages/LR9.html" target="CONTENT">Лабораторная работа №9</a></li>
         <li><a href="/pages/LR10.html" target="CONTENT">Лабораторная работа №10</a></li>
     </ol>
-    <a href="https://github.com/AfterMyLife/lr-stip" target="_blank">
+    <a href="https://github.com/AfterMyLife/Volevoy_Stip_LR" target="_blank">
         <img src="/img/github_icon.png" height="200" width="200"
             style="position: fixed; bottom: 0; align-items: center;">
     </a>
