--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
         <li><a href="/pages/LR4.html" target="CONTENT">Лабораторная работа №4</a></li>
         <li><a href="/pages/LR5.html" target="CONTENT">Лабораторная работа №5</a></li>
         <li><a href="/pages/LR6.html" target="CONTENT">Лабораторная работа №6</a></li>
-        <li><a href="/pages/LR7.html" target="CONTENT">Лабораторная работа №7</a></li>
+        <li><a href="/pages/books.xml" target="CONTENT">Лабораторная работа №7</a></li>
         <li><a href="/pages/LR8.html" target="CONTENT">Лабораторная работа №8</a></li>
         <li><a href="/pages/LR9.html" target="CONTENT">Лабораторная работа №9</a></li>
         <li><a href="/pages/LR10.html" target="CONTENT">Лабораторная работа №10</a></li>
