fix problems and made lr9

--- a/pages/LR8.html
+++ b/pages/LR8.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    lr2
+    <h3>Для 8 лабораторной работы все нужные файлы хранятся в папке lr-xml.</h3>
+    <img src="../img/Screenshot_1.png">
 </body>
 </html>
