--- a/pages/LR7.html
+++ b/pages/LR7.html
@@ -24,66 +24,8 @@
         - общее количество экземпляров;
         - количество выданных экземпляров.
     </p>
+    <iframe src="../pages/lr-xml/books.xml" height="300" width="1000" title="xml"></iframe>
 
-    <div id='content'>
-        <table id='books' cellpadding='10px' style="text-align:left;">
-            <thead>
-                <tr>
-                    <th>Номер книги</th>
-                    <th>Стеллаж</th>
-                    <th>Автор</th>
-                    <th>Название</th>
-                    <th>Общее количество экземпляров</th>
-                    <th>Количество выданных экземпляров</th>
-                </tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-        </table>
-    </div>
-    <script>
-        let xmlContent = '';
-        let tableBooks = document.getElementById('books');
-        fetch('books.xml').then((response) => {
-            response.text().then((xml) => {
-                xmlContent = xml;
-
-                let parser = new DOMParser();
-                let xmlDOM = parser.parseFromString(xmlContent, 'application/xml');
-                let books = xmlDOM.querySelectorAll('Book');
-
-                books.forEach(bookXmlNode => {
-
-                    let row = document.createElement('tr');
-
-
-                    let td = document.createElement('td');
-                    td.innerText = bookXmlNode.children[0].innerHTML;
-                    row.appendChild(td);
-
-                    //  title
-                    td = document.createElement('td');
-                    td.innerText = bookXmlNode.children[1].innerHTML;
-                    row.appendChild(td);
-
-                    //price
-                    td = document.createElement('td');
-                    td.innerText = '$ ' + bookXmlNode.children[3].innerHTML;
-                    row.appendChild(td);
-
-                    //description
-                    td = document.createElement('td');
-                    td.innerText = bookXmlNode.children[5].innerHTML;
-                    row.appendChild(td);
-
-                    tableBooks.children[1].appendChild(row);
-
-                });
-
-            });
-        });
-    </script>
 </body>
 
 </html>
