--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
    <title>Лабораторные работы</title>
 </head>
-<div class="bege">
+<div class="main-frame">
    <frameset cols="20%,75%" frameborder="1" framespacing="0">
-      <frame src="menu.html">
+      <frame src="frame-menu.html">
 
          <frameset rows="20%,75%">
-            <frame src="top.html" name="TOP" scrolling="no" noresize>
-               <frame src="/pages/LR2.html" name="CONTENT">
+            <frame src="frame-header.html" name="TOP" scrolling="no" noresize>
+               <frame src="./pages/LR2/LR2.html" name="CONTENT">
          </frameset>
 </div>
 
