--- a/pages/LR10/task3_lr10/task3_LR10.html
+++ b/pages/LR10/task3_lr10/task3_LR10.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document 1</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 
 <body>
+    <P>Заменить из XML файла цифровые значения словами</P>
 </body>
 <script language="javascript">
     var oMystuff = new ActiveXObject("Microsoft.XMLDOM")
